# schaeppert

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  clippy.yml  docs.yml  test.yml
examples/: bottleneck-1-ab-complete.tikz  bottleneck-1-ab-finsm.tikz  bottleneck-1-ab.dot  bottleneck-1-ab.tikz  bottleneck-1-abcde-complete.tikz  bottleneck-1-abcde.tikz  bottleneck-2-free.dot  bottleneck-2-staged.dot  bottleneck-2.tikz  bug12.tikz  create_pdfs.sh  example1.tikz  example2.dot  fig1.dot  fig2.dot  fig6-butterfly.dot
latex/: examples.tex  resultat.template.tex  solution.template.tex
src/: arena.rs  cli.rs  coef.rs  downset.rs  flow.rs  graph.rs  ideal.rs  iterative.rs  lib.rs  logging.rs  main.rs  memoizer.rs  nfa.rs  partitions.rs  semigroup.rs  sheep.rs  solution.rs  solver.rs  strategy.rs
tests/: integration_test.rs
