[package]
name = "shepherd"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.27"
env_logger = "0.11"
regex = "1"
clap = { version = "4.5.34", features = ["derive"] }
tera = "1.19"
dot-parser = "0.4.2"
cached = "0.55.1"
once_cell = "1.21.2"
rayon = "1.10.0"
itertools = "0.14.0"

[profile.release]
strip = true # Supprime les symboles de débogage
lto = true   # Optimisation inter-procédurale (Link-Time Optimization)
